# jira2taskade

./: .gitignore  LICENCE  README.md  pyproject.toml
.github/workflows/: python-app.yml
jira2taskade/: cli.py  config_read.py  jira_conn.py  taskade_conn.py
tests/: test_config.json  test_config_read.py  test_jira_conn.py  test_taskade_conn.py
